--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 2.1.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2010-09-27 09:34+0100\n"
+"POT-Creation-Date: 2010-09-28 22:28+0100\n"
 "PO-Revision-Date: 2005-05-20 18:26+0800\n"
 "Last-Translator: ronggui\n"
 "Language-Team: Chinese\n"
@@ -408,9 +408,9 @@ msgid "file choice cancelled"
 msgstr "撤消文件选择"
 
 #: src/gnuwin32/run.c:228
-#, fuzzy, c-format
+#, c-format
 msgid "CreateProcess failed to run '%s'"
-msgstr "读取%s失败"
+msgstr "CreateProcess调用'%s'失败"
 
 #: src/gnuwin32/run.c:322
 msgid "Child process not responding.  R will terminate it."
@@ -707,18 +707,18 @@ msgid "character argument expected"
 msgstr "需要字符参数"
 
 #: src/main/Rdynload.c:903 src/main/Rdynload.c:936
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "unable to load shared object '%s':\n"
 "  %s"
 msgstr ""
-"无法载入共享图书馆‘%s’：:\n"
+"无法载入共享目标对象‘%s’：:\n"
 "  %s"
 
 #: src/main/Rdynload.c:916
-#, fuzzy, c-format
+#, c-format
 msgid "shared object '%s' was not loaded"
-msgstr "没有载入动态/共享图书馆'%s' "
+msgstr "没有载入共享目标对象'%s'"
 
 #: src/main/Rdynload.c:976
 #, c-format
@@ -995,12 +995,12 @@ msgstr "第一个参数不对, 必需是陈列"
 
 #: src/main/array.c:1051 src/main/array.c:1054
 msgid "'a' does not have named dimnames"
-msgstr ""
+msgstr "'a'必需有带名字的dimnames"
 
 #: src/main/array.c:1061
 #, c-format
 msgid "perm[%d] does not match a dimension name"
-msgstr ""
+msgstr "perm[%d]和维度名字不相配"
 
 #: src/main/array.c:1068
 msgid "'perm' is of wrong length"
@@ -1011,9 +1011,8 @@ msgid "value out of range in 'perm'"
 msgstr "'perm'里的值在范围外"
 
 #: src/main/array.c:1157
-#, fuzzy
 msgid "'resize' must be TRUE or FALSE"
-msgstr "'increasing'必需是TRUE或是FALSE"
+msgstr "'resize'的值必需是TRUE或是FALSE"
 
 #: src/main/array.c:1218
 msgid "'x' must be numeric"
@@ -1187,9 +1186,8 @@ msgid "no slot of name \"%s\" for this object of class \"%s\""
 msgstr "\"%1$s\"槽名不存在于\"%2$s\"类别对象中"
 
 #: src/main/attrib.c:1535
-#, fuzzy
 msgid "attempt to set slot on NULL object"
-msgstr "NULL是不能有属性的"
+msgstr "不能为NULL目标对象设属性"
 
 #: src/main/attrib.c:1576
 msgid "formal classes cannot be used without the methods package"
@@ -1280,7 +1278,7 @@ msgstr "矢量size设得太大了"
 #: src/main/envir.c:1856 src/main/envir.c:2529 src/main/envir.c:2589
 #: src/main/envir.c:2908 src/main/envir.c:2937 src/main/envir.c:2958
 #: src/main/envir.c:2981 src/main/envir.c:3015 src/main/envir.c:3035
-#: src/main/envir.c:3340 src/main/envir.c:3344 src/main/eval.c:3803
+#: src/main/envir.c:3340 src/main/envir.c:3344 src/main/eval.c:3804
 #: src/main/objects.c:190 src/main/objects.c:196 src/main/saveload.c:2057
 #: src/main/saveload.c:2338 src/main/serialize.c:2264
 msgid "use of NULL environment is defunct"
@@ -1363,7 +1361,7 @@ msgstr "'length'不能是遗漏值"
 
 #: src/main/builtin.c:877 src/main/eval.c:417 src/main/eval.c:521
 #: src/main/eval.c:1616 src/main/eval.c:1682 src/main/eval.c:1742
-#: src/main/eval.c:2073 src/main/eval.c:3435 src/main/eval.c:3542
+#: src/main/eval.c:2073 src/main/eval.c:3435 src/main/eval.c:3543
 msgid "'...' used in an incorrect context"
 msgstr "'...'用在的上下文不对"
 
@@ -1513,7 +1511,7 @@ msgstr "不能强迫改变非因子"
 msgid "list argument expected"
 msgstr "需要串列参数"
 
-#: src/main/coerce.c:1440 src/main/eval.c:3800 src/main/eval.c:3807
+#: src/main/coerce.c:1440 src/main/eval.c:3801 src/main/eval.c:3808
 msgid "invalid environment"
 msgstr "环境不对"
 
@@ -1888,7 +1886,7 @@ msgstr "分配gz文件链结失败"
 
 #: src/main/connections.c:1325
 msgid "append mode may not do what you expect"
-msgstr ""
+msgstr "追加模式可能不是你所期望的"
 
 #: src/main/connections.c:1333
 #, c-format
@@ -2131,13 +2129,12 @@ msgid "can only write to a binary connection"
 msgstr "只能写入二进列链结"
 
 #: src/main/connections.c:3703
-#, fuzzy
 msgid "only 2^31-1 bytes can be written to a raw vector"
-msgstr "只能用ascii格式书写文字状态的链结"
+msgstr "写原始矢量最多只能用2^31-1字节"
 
 #: src/main/connections.c:3705
 msgid "only 2^31-1 bytes can be written in a single readBin() call"
-msgstr ""
+msgstr "单次调用readBin()的话最多只能写2^31-1字节"
 
 #: src/main/connections.c:3750 src/main/connections.c:3903
 #: src/main/connections.c:4171 src/main/connections.c:4211
@@ -2259,7 +2256,7 @@ msgstr "文字方式的'file'联结有可能会出错"
 msgid ""
 "cannot create a gzcon connection from a writable textConnection; maybe use "
 "rawConnection"
-msgstr ""
+msgstr "不能创建一个可写的textConnection的gzcon连接；试用rawConnection一下"
 
 #: src/main/connections.c:5036 src/main/connections.c:5040
 #: src/main/connections.c:5047 src/main/connections.c:5061
@@ -2826,9 +2823,8 @@ msgid "out of memory while clipping polyline"
 msgstr "剪裁多重线的时候内存不够"
 
 #: src/main/engine.c:1377
-#, fuzzy
 msgid "Invalid graphics path"
-msgstr "图形狀態出错"
+msgstr "图形路径出错"
 
 #: src/main/engine.c:1608
 #, c-format
@@ -2970,24 +2966,22 @@ msgid "cannot add binding of '%s' to the base environment"
 msgstr "无法在基本环境里加联编'%s' "
 
 #: src/main/envir.c:1554
-#, fuzzy
 msgid "first argument must be a named list"
-msgstr "第一个参数必需是串列"
+msgstr "第一个参数必需是带名字的串列"
 
 #: src/main/envir.c:1559
-#, fuzzy
 msgid "names(x) must be valid character(length(x))."
-msgstr "'names'必需是字符矢量"
+msgstr "names(x)有效的长度为length(x)的字符矢量"
 
 #: src/main/envir.c:1566
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' must be an environment"
-msgstr "'enclos'必需是环境"
+msgstr "'%s'必需是环境"
 
 #: src/main/envir.c:1579
-#, fuzzy, c-format
+#, c-format
 msgid "invalid '%s' argument: must be NULL or environment"
-msgstr "'env'参数必需是环境"
+msgstr "'%s'参数必需是NULL或环境"
 
 #: src/main/envir.c:1609
 msgid "cannot remove variables from base namespace"
@@ -3550,7 +3544,7 @@ msgstr "if(*)的参数不能作为逻辑值来用"
 msgid "invalid sequence argument in for loop"
 msgstr "循环里的顺序参数不对"
 
-#: src/main/eval.c:3345 src/main/eval.c:3366 src/main/eval.c:3480
+#: src/main/eval.c:3345 src/main/eval.c:3366 src/main/eval.c:3481
 msgid "not a BUILTIN function"
 msgstr "非BUILTIN函数"
 
@@ -3558,60 +3552,60 @@ msgstr "非BUILTIN函数"
 msgid "bad function"
 msgstr "函数不对"
 
-#: src/main/eval.c:3506
+#: src/main/eval.c:3507
 msgid "not a SPECIAL function"
 msgstr "非SPECIAL函数"
 
-#: src/main/eval.c:3740
+#: src/main/eval.c:3741
 msgid "cannot find index for threaded code address"
 msgstr "找不到线程代码地址的索引"
 
-#: src/main/eval.c:3820
+#: src/main/eval.c:3821
 msgid "invalid symbol"
 msgstr "符号不对"
 
-#: src/main/eval.c:3864
+#: src/main/eval.c:3865
 msgid "argument is not a byte code object"
 msgstr "参数不是位元组码对象"
 
-#: src/main/eval.c:3885
+#: src/main/eval.c:3886
 msgid "bad file name"
 msgstr "文件名字不对"
 
-#: src/main/eval.c:3889 src/main/eval.c:3910
+#: src/main/eval.c:3890 src/main/eval.c:3911
 msgid "unable to open 'file'"
 msgstr "无法打开'file'"
 
-#: src/main/eval.c:3904 src/main/saveload.c:1929
+#: src/main/eval.c:3905 src/main/saveload.c:1929
 msgid "'file' must be non-empty string"
 msgstr "'file'必需是非空字符串"
 
-#: src/main/eval.c:3906 src/main/saveload.c:1931 src/main/saveload.c:2221
+#: src/main/eval.c:3907 src/main/saveload.c:1931 src/main/saveload.c:2221
 #: src/main/serialize.c:1790
 msgid "'ascii' must be logical"
 msgstr "'ascii’必需是逻辑值"
 
-#: src/main/eval.c:3935 src/main/eval.c:3942
+#: src/main/eval.c:3936 src/main/eval.c:3943
 msgid "R_CompiledFileName: buffer too small"
 msgstr "R_CompiledFileName: 缓冲区太小"
 
-#: src/main/eval.c:3975
+#: src/main/eval.c:3976
 msgid "code must be a generic vector"
 msgstr "代码必需是矢量类属"
 
-#: src/main/eval.c:4014
+#: src/main/eval.c:4015
 msgid "profile timer in use"
 msgstr "程序概要分析计时器在运行中"
 
-#: src/main/eval.c:4016
+#: src/main/eval.c:4017
 msgid "already byte code profiling"
 msgstr "已经在进行位元组码程序概要分析"
 
-#: src/main/eval.c:4034
+#: src/main/eval.c:4035
 msgid "setting profile timer failed"
 msgstr "程序概要分析计时器设制失败"
 
-#: src/main/eval.c:4051
+#: src/main/eval.c:4052
 msgid "not byte code profiling"
 msgstr "非位元组码程序概要分析"
 
@@ -3636,33 +3630,29 @@ msgid "invalid factors"
 msgstr "因子不对"
 
 #: src/main/gevents.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' events not supported in this device"
-msgstr "本平台不支持savePlot()"
+msgstr "本平台不支持'%s'事件"
 
 #: src/main/gevents.c:65
-#, fuzzy
 msgid "internal error"
-msgstr "'do_sys'里发生了内部错误"
+msgstr "内部错误"
 
 #: src/main/gevents.c:71
-#, fuzzy
 msgid "this graphics device does not support event handling"
-msgstr "图形设备不支持图形事件"
+msgstr "图形设备不支持事件处理"
 
 #: src/main/gevents.c:111
 msgid "invalid prompt"
 msgstr "提示不对"
 
 #: src/main/gevents.c:123
-#, fuzzy
 msgid "recursive use of getGraphicsEvent not supported"
-msgstr "不支持%s这种输入状态"
+msgstr "不支持getGraphicsEvent的递归应用"
 
 #: src/main/gevents.c:133
-#, fuzzy
 msgid "no graphics event handlers set"
-msgstr "没有活动图形设备"
+msgstr "还没有设定图形事件处理机"
 
 #: src/main/gram.y:137 src/main/gram.y:152 src/main/gram.y:2007
 #: src/main/gram.y:2021
@@ -3795,7 +3785,7 @@ msgstr "由\"%s\"开头的字符串中存在'\\%c'，但没有这种逸出号"
 
 #: src/main/gram.y:2282
 msgid "mixing Unicode and octal/hex escapes in a string is not allowed"
-msgstr ""
+msgstr "在字符串中混合Unicode和八进制/十六进制转义是不允许的"
 
 #: src/main/gram.y:2286
 #, c-format
@@ -5174,9 +5164,8 @@ msgid "'%ls' already exists"
 msgstr "'%ls'已存在"
 
 #: src/main/platform.c:2105
-#, fuzzy
 msgid "'mode' must be of length at least one"
-msgstr "'hadj'的长度必需为一"
+msgstr "'mode'的长度至少需要是一"
 
 #: src/main/platform.c:2161
 msgid "insufficient OS support on this platform"
@@ -5306,14 +5295,12 @@ msgid "cannot mix zero-length and non-zero-length coordinates"
 msgstr "不能将零长度的座标同其它长度的座标混合在一起"
 
 #: src/main/plot.c:1955
-#, fuzzy
 msgid "unable to allocate memory (in GPath)"
-msgstr "无法分配内存(GPolygon)"
+msgstr "无法分配内存(GPath)"
 
 #: src/main/plot.c:1961
-#, fuzzy
 msgid "invalid x or y (in GPath)"
-msgstr "RNGkind里的Normal类不对"
+msgstr "x或y的值不对(在GPath里)"
 
 #: src/main/plot.c:2084
 msgid "invalid arrow head length"
@@ -6407,7 +6394,7 @@ msgstr "数据长度不是分割变数的倍数"
 
 #: src/main/split.c:56
 msgid "factor has bad level"
-msgstr ""
+msgstr "因子的水平不对"
 
 #: src/main/sprintf.c:93
 #, c-format
@@ -7587,9 +7574,9 @@ msgid "could not open file '%s'"
 msgstr "无法打开文件'%s'"
 
 #: src/modules/X11/devX11.c:1978
-#, fuzzy, c-format
+#, c-format
 msgid "%s not available for this device"
-msgstr "公制信息不适用于这个设备"
+msgstr "%s不适用于这个设备"
 
 #: src/modules/X11/devX11.c:2060
 msgid "Unable to create XImage"
@@ -7904,24 +7891,23 @@ msgid "line %d may be truncated in call to system(, intern = TRUE)"
 msgstr "调用system(, intern = TRUE)时%d行可能会被截断"
 
 #: src/unix/sys-unix.c:298
-#, fuzzy, c-format
+#, c-format
 msgid "error in running command: '%s'"
-msgstr "unz写码发生了内部错误"
+msgstr "运行命令时出错：'%s'"
 
 #: src/unix/sys-unix.c:300
-#, fuzzy
 msgid "error in running command"
-msgstr "unz写码发生了内部错误"
+msgstr "调用命令时发生了错误"
 
 #: src/unix/sys-unix.c:304
 #, c-format
 msgid "running command '%s' had status %d and error message '%s'"
-msgstr ""
+msgstr "运行命令'%s'的状态是%d：错误消息是'%s'"
 
 #: src/unix/sys-unix.c:309
 #, c-format
 msgid "running command '%s' had status %d"
-msgstr ""
+msgstr "运行命令'%s'的状态是%d"
 
 #: src/unix/sys-unix.c:390
 msgid "Sys.info() is not implemented on this system"
