--- a/po/RGui-ja.po
+++ b/po/RGui-ja.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: R 2.1.1 \n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
 "POT-Creation-Date: 2010-08-30 08:39+0100\n"
-"PO-Revision-Date: 2009-10-07 12:29+0900 \n"
-"Last-Translator: takahashi <takahashi.kohske@gmail.com> \n"
+"PO-Revision-Date: 2010-09-29 06:37+0900 \n"
+"Last-Translator: Masafumi OKADA <mokada@mail.ne.jp> \n"
 "Language-Team: R-core <R-core@R-project.org> \n"
 "MIME-Version: 1.0 \n"
 "Content-Type: text/plain; charset=UTF-8 \n"
@@ -645,9 +645,9 @@ msgid "Select 'Rconsole' file"
 msgstr " ファイル 'Rconsole' を選択 "
 
 #: preferences.c:687
-#, fuzzy, c-format
+#, c-format
 msgid "Ignored '%s' at line %d of file %s"
-msgstr " ファイル %2$s の %1$d 行目でエラーが発生しました "
+msgstr " ファイル %3$s の %2$d 行目にある '%1$s' を無視しました "
 
 #: preferences.c:788
 msgid "Rgui Configuration Editor"
